# wfs_fetcher

./: .gitignore  README.md  pyproject.toml
wfs_fetcher/: __init__.py  config.py  data_fetcher.py  file_exporter.py  geometry_categorizer.py  logging_config.py  main.py  wfs_service.py
